<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/delete_recording_popup_background"
    android:backgroundTint="@color/white">

    <ImageView
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:src="@drawable/popup_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/deleteWarningLyt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeBtn">

        <ImageView
            android:id="@+id/warningImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/icon_warning" />

        <TextView
            android:id="@+id/affirmationTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/delete_recording_"
            android:textColor="@color/pickled_bluewood"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/descriptionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/delete_description"
        android:textColor="@color/pickled_bluewood"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteWarningLyt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="@dimen/_25sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/charcoal"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionTxt"
        app:strokeColor="@color/charcoal"
        app:strokeWidth="@dimen/_1sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_7sdp"
        android:backgroundTint="@color/charcoal"
        android:paddingHorizontal="@dimen/_25sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/Delete"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintBottom_toBottomOf="@id/cancelBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cancelBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>